[build-system]
requires = [
	"setuptools >= 61.0",
	"numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymaster"
version = "2.5.2"
authors = [
  {name="David Alonso", email="david.alonso@physics.ox.ac.uk"}
]
description = "Library for pseudo-Cl computation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"healpy",
	"ducc0"
]
classifiers=[
	'License :: OSI Approved :: BSD License',
	'Programming Language :: Python :: 3',
	'Operating System :: Unix',
	'Operating System :: MacOS'
]

[project.urls]
Repository = "https://github.com/LSSTDESC/NaMaster.git"
Documentation = "https://namaster.readthedocs.io/en/latest/"
Changelog = "https://github.com/LSSTDESC/NaMaster/blob/master/CHANGELOG.md"
Issues = "https://github.com/LSSTDESC/NaMaster/issues"

[tool.setuptools]
packages = ["pymaster"]
